Added PATCH route
